tradeview: Implement database frame, data communication frame and windows management frame

--- a/tradeview/qml/qml.qrc
+++ b/tradeview/qml/qml.qrc
@@ -4,19 +4,17 @@
         <file>main.qml</file>
         
         <!-- 页面 -->
-        <file>pages/CandlestickPage.qml</file>
-        <file>pages/FootprintPage.qml</file>
-        <file>pages/MicroOrderBookPage.qml</file>
+        <file>pages/OrderFlowPage.qml</file>
         <file>pages/OrderBookPage.qml</file>
         <file>pages/TickTradePage.qml</file>
         <file>pages/SettingsPage.qml</file>
         
+        <!-- 窗口 -->
+        <file>windows/OrderFlowWindow.qml</file>
+        <file>windows/OrderBookWindow.qml</file>
+        <file>windows/TickTradeWindow.qml</file>
+        
         <!-- 组件 -->
-        <file>components/ChartToolbar.qml</file>
-        <file>components/StatusBar.qml</file>
         <file>components/NavigationBar.qml</file>
-        <file>components/DataTable.qml</file>
-        <file>components/FootprintChart.qml</file>
-        <file>components/DataPanel.qml</file>
     </qresource>
 </RCC> 
